bdr.BDR.scala.error
Compilation error:
BDR:3: error: '(' expected but identifier found.
  if isOverMessage() {
     ^BDR:45: error: illegal start of simple expression
} 
^